// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for list 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F6;
  width: 100%;
  height: 2rem;
  color: #3F3F42;
  padding: 0 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    border: solid 0.1875rem transparent;
    border-bottom: transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    margin-inline: 0.5rem;
    margin: 0;
  }
}

@media (min-width: 25rem) {
  .emotion-4 {
    margin-inline: 1rem;
    padding: 0 1rem;
    margin: 0 -0.2rem;
  }
}

.emotion-5 ul {
  list-style: none;
  -webkit-padding-start: 0;
  padding-inline-start: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;
}

.is-opera-mini .emotion-5 {
  list-style: none;
  -webkit-padding-start: 0;
  padding-inline-start: 0;
  margin: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-inline: 0.5rem;
}

.emotion-6:last-of-type {
  margin-bottom: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-6 {
    border: solid 0.1875rem transparent;
  }
}

@media (min-width: 25rem) {
  .emotion-6 {
    margin-inline: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    margin-inline: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    margin-inline: 0;
  }
}

@media (max-width: 14.9375rem) {
  .is-opera-mini .emotion-6 {
    margin-inline: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-6 {
    margin-inline: 1rem;
  }
}

@media (min-width: 63rem) {
  .is-opera-mini .emotion-6 {
    margin-inline: 0;
  }
}

.emotion-7 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-7 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-7 {
    width: calc(50% - 1rem);
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #545658;
}

.emotion-8::before {
  bottom: 0;
  content: "";
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.emotion-9 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
  fill: currentColor;
}

.emotion-18 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <section
    aria-labelledby="Show-all-links-no-images"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <strong
        class="emotion-4"
        data-testid="eoj-recommendations-heading"
        id="Show-all-links-no-images"
      >
        Show all links (no images)
      </strong>
      <div
        class="emotion-5"
      >
        <ul>
          <li
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <a
                class="emotion-8"
                href="https://www.bbc.co.uk/pidgin"
              >
                Show headline
                <svg
                  aria-hidden="true"
                  class="emotion-9"
                  focusable="false"
                  height="12"
                  viewBox="0 0 32 32"
                  width="12"
                >
                  <path
                    d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
                  />
                </svg>
              </a>
            </div>
          </li>
          <li
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <a
                class="emotion-8"
                href="https://www.bbc.com/mundo"
              >
                Link with Headline
                <svg
                  aria-hidden="true"
                  class="emotion-9"
                  focusable="false"
                  height="12"
                  viewBox="0 0 32 32"
                  width="12"
                >
                  <path
                    d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
                  />
                </svg>
              </a>
            </div>
          </li>
          <li
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <a
                class="emotion-8"
                href="https://www.bbc.com/brasil"
              >
                Brasil homepage
                <svg
                  aria-hidden="true"
                  class="emotion-9"
                  focusable="false"
                  height="12"
                  viewBox="0 0 32 32"
                  width="12"
                >
                  <path
                    d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
                  />
                </svg>
              </a>
            </div>
          </li>
        </ul>
      </div>
      <p
        class="emotion-18 emotion-19"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for list with no title 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  background: #FFFFFF;
  padding: 0 1rem 1.5rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100%;
}

@media (min-width: 63rem) {
  .emotion-4 {
    margin: 0 -1rem;
  }
}

.emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-5 {
    width: calc(50% - 1rem);
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #545658;
}

.emotion-6::before {
  bottom: 0;
  content: "";
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.emotion-7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
  fill: currentColor;
}

.emotion-8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <section
    aria-label="Related content"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <a
            class="emotion-6"
            href="https://www.bbc.com/pidgin"
          >
            Single link
            <svg
              aria-hidden="true"
              class="emotion-7"
              focusable="false"
              height="12"
              viewBox="0 0 32 32"
              width="12"
            >
              <path
                d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
              />
            </svg>
          </a>
        </div>
      </div>
      <p
        class="emotion-8 emotion-9"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for single card 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F6;
  width: 100%;
  height: 2rem;
  color: #3F3F42;
  padding: 0 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    border: solid 0.1875rem transparent;
    border-bottom: transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    margin-inline: 0.5rem;
    margin: 0;
  }
}

@media (min-width: 25rem) {
  .emotion-4 {
    margin-inline: 1rem;
    padding: 0 1rem;
    margin: 0 -0.2rem;
  }
}

.emotion-5 {
  background: #FFFFFF;
  padding: 0 1rem 1.5rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100%;
}

@media (min-width: 63rem) {
  .emotion-5 {
    margin: 0 -1rem;
  }
}

.emotion-6 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-6 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-6 {
    width: calc(50% - 1rem);
  }
}

.emotion-7 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-7:hover,
.emotion-7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:visited {
  color: #545658;
}

.emotion-7::before {
  bottom: 0;
  content: "";
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.emotion-8 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
  fill: currentColor;
}

.emotion-9 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <section
    aria-labelledby="Single-link"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <strong
        class="emotion-4"
        data-testid="eoj-recommendations-heading"
        id="Single-link"
      >
        Single link
      </strong>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <a
            class="emotion-7"
            href="https://www.bbc.com/pidgin"
          >
            Single link
            <svg
              aria-hidden="true"
              class="emotion-8"
              focusable="false"
              height="12"
              viewBox="0 0 32 32"
              width="12"
            >
              <path
                d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
              />
            </svg>
          </a>
        </div>
      </div>
      <p
        class="emotion-9 emotion-10"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match snapshot when in dark ui mode 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.125rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-2:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  background: #141414;
  padding: 0 1rem 1.5rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100%;
}

@media (min-width: 63rem) {
  .emotion-4 {
    margin: 0 -1rem;
  }
}

.emotion-5 {
  position: relative;
  background-color: #3A3C3E;
  padding: 1rem;
  -webkit-padding-end: 2.375rem;
  padding-inline-end: 2.375rem;
  height: auto;
  display: block;
  width: 100%;
}

.is-opera-mini .emotion-5 {
  position: relative;
  background-color: #E6E8EA;
  padding: 1rem;
  margin-bottom: 1rem;
  width: calc(100% - 0.5rem);
}

@media (min-width: 25rem) {
  .is-opera-mini .emotion-5 {
    width: calc(50% - 1rem);
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #F6F6F6;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #545658;
}

.emotion-6::before {
  bottom: 0;
  content: "";
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}

.emotion-7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  inset-inline-end: 0.75rem;
  fill: currentColor;
}

.emotion-8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <section
    aria-label="Related content"
    data-e2e="article-links-block"
    role="region"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <a
        class="emotion-2 emotion-3"
        href="#end-of-article-links-block"
      >
        Skip content and continue reading
      </a>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <a
            class="emotion-6"
            href="https://www.bbc.com/pidgin"
          >
            Single link
            <svg
              aria-hidden="true"
              class="emotion-7"
              focusable="false"
              height="12"
              viewBox="0 0 32 32"
              width="12"
            >
              <path
                d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
              />
            </svg>
          </a>
        </div>
      </div>
      <p
        class="emotion-8 emotion-9"
        id="end-of-article-links-block"
        tabindex="-1"
      >
        End of content
      </p>
    </div>
  </section>
</div>
`;
